--- a/index.css
+++ b/index.css
@@ -1,13 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+
+
+html {
+    scroll-behavior: smooth;
+}
 
 body {
     --main-font: 'Poppins', monospace;
+    font-weight: 700;
     --main-color: black;
     --add-color: #828282;
     font-family: var(--main-font);
     --nav-font-size: 18px;
-    --person-name-font-size: 48;
+    --person-name-font-size: 48px;
     --background-add-color: #f6f6f6;
+    --person-about-font-size: 18px;
+    --language-font-size: 16px;
+    --article-font-size: 34px;
+    --p-font-size: 18px;
 }
 
 a {
@@ -16,7 +27,7 @@ a {
 
 .nav-block {
     display: flex;
-    padding: 30px 0 30px 0;
+    padding: 33px 0 33px 0;
     justify-content: space-between;
     align-items: center;
     font-size: var(--nav-font-size);
@@ -35,19 +46,52 @@ a {
     color: var(--main-color);
 }
 
+.home-fixed {
+    position: fixed;
+    right: 50px;
+    bottom: 100px;
+    width: 50px;
+    height: 50px;
+    background-color: white;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.home-fixed:hover {
+    background-color: var(--background-add-color);
+    transition: 0.3s;
+}
+
 hr {
     color: var(--add-color);
+    margin: 0;
 }
+
+
 
 .person-about {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.person-name h1{
+    margin: 39.7px 0 39.7px;
     font-size: var(--person-name-font-size);
+}
+
+.person-about p {
+    position: relative;
+    top: 17px;
+    margin: 0;
+    font-size: var(--person-about-font-size);
 }
 
 .language {
     transform: rotate(0.75turn);
+    font-size: var(--language-font-size);
 }
 
 .language .ua {
@@ -65,4 +109,92 @@ hr {
 
 .person-photo {
     width: 100%;
+    margin-bottom: 109px;
+}
+
+.about-me {
+    padding: 107px;
+    background-color: var(--background-add-color);
+    text-align: center;
+}
+
+.about-me h2 {
+    font-size: var(--article-font-size);
+}
+
+.about-me p {
+    font-size: var(--p-font-size);
+    font-weight: 500;
+}
+
+.skills {
+    padding: 86px 0 110px 0;
+    text-align: center;
+}
+
+.skills h1 {
+    margin: 0;
+}
+
+.skills .subheading {
+    margin: 69px;
+    font-weight: 500;
+}
+
+.program-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    color: var(--add-color);
+    font-size: 14px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.icon {
+    height: 89px;
+    width: 89px;
+}
+
+.program-cards p {
+    margin: 112px 0 0 0;
+    position: absolute;
+}
+
+.stars {
+    width: 166px;
+    margin: 91px 20px 0 20px;
+}
+
+
+.portfolio {
+    background-color: var(--background-add-color);
+    padding: 96px 0 96px 0;
+    text-align: center;
+}
+
+.portfolio h2 {
+    margin: 16px;
+    font-size: var(--article-font-size);
+}
+.portfolio .work {
+    margin: 35px 0 166px 0;
+}
+
+.portfolio img {
+    width: 100%;
+}
+
+.portfolio p {
+    font-size: var(--p-font-size);
+    font-weight: 500;
+    margin: 45px 0 100px 0;
+}
+
+footer .contacts {
+    text-align: center;
 }
