--- a/learning/portfolio/index.css
+++ b/learning/portfolio/index.css
@@ -59,6 +59,7 @@ a {
   justify-content: center;
   align-items: center;
   text-decoration: none;
+  color: black;
 }
 
 .home-fixed:hover {
@@ -94,19 +95,6 @@ hr {
   font-size: var(--language-font-size);
 }
 
-.language .ua {
-  color: var(--add-color);
-}
-
-.language .ua:hover {
-  color: var(--main-color);
-  transition: 0.3s;
-}
-
-.language .eng {
-  color: var(--main-color);
-}
-
 .person-photo {
   width: 100%;
   margin-bottom: 109px;
@@ -137,14 +125,14 @@ hr {
 }
 
 .skills .subheading {
-  margin: 69px;
+  margin: 30px auto 30px auto;
   font-weight: 500;
 }
 
 .program-cards {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   color: var(--add-color);
   font-size: 14px;
 }
@@ -182,9 +170,16 @@ hr {
   font-size: var(--article-font-size);
 }
 
+.portfolio .portfolio-p {
+  margin: 30px 0 30px 0;
+}
+
 .portfolio .item img {
-  width: 100%;
-  height: 310px;
+  max-height: 300px;
+}
+
+.portfolio .img-descr {
+  font-weight: 500;
 }
 
 .slider-btns {
@@ -222,6 +217,10 @@ hr {
   border-radius: 0 15px 15px 0;
 }
 
+.next-slide a, .prev-slide a {
+  user-select: none;
+}
+
 footer .contacts {
   text-align: center;
 }
@@ -237,7 +236,6 @@ footer p {
 }
 
 .button {
-  background-color: black;
   width: 180px;
   height: 42px;
   border-radius: 21px;
@@ -247,10 +245,24 @@ footer p {
   justify-content: center;
   align-items: center;
   margin: auto;
+  border: 2px solid black;
+}
+
+.button {
+  background-color: black;
+  transition: 0.3s;
+}
+
+.button:hover {
+  background-color: white;
+  border: 2px solid black;
+  color: black;
+  transition: 0.3s;
 }
 
 .button p {
   margin: 0;
+  user-select: none;
 }
 
 .social-media {
